# HSRAI

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MARKET_ANALYSIS.md  README.md  ROADMAP_PRODUCTION.md  VALIDATION_REPORT.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  run_api.py  verify_hsrai.py
.github/workflows/: ci.yml
.kiro/specs/hybrid-semantic-reasoning-ai/: design.md  requirements.md  tasks.md
benchmarks/: benchmarks.py  load_test.py
docs/: API.md  CLI.md
hsrai/: __main__.py  cli.py  logging_config.py  middleware.py  resilience.py
hsrai/api/: server.py
hsrai/common/: __init__.py  graph.py  models.py  phoneme.py  types.py
hsrai/compression/: mapper.py  multimodal.py  nlp.py
hsrai/core/: models.py  types.py  utils.py
hsrai/graph/: builder.py  models.py
hsrai/knowledge/: __init__.py  models.py  neo4j_graph.py  query.py
hsrai/output/: __init__.py  generator.py  models.py
hsrai/plugins/: __init__.py  interfaces.py  manager.py
hsrai/reasoning/: hybrid_engine.py  oscillatory.py
hsrai/system/: __init__.py  api.py  config.py  controller.py
hsrai/tests/: test_api.py  test_api_integration.py  test_compression.py  test_config_manager.py  test_core_utils.py  test_extensibility.py  test_graph.py  test_integration.py  test_knowledge.py  test_multimodal.py  test_output.py  test_properties.py  test_reasoning.py  test_structure.py  test_system.py  test_trust.py  test_trust_reporting.py
hsrai/trust/: __init__.py  reporting.py  verifier.py
isre/: __init__.py  types.py
isre/compression/: base.py  multimodal.py  speech.py  text.py
isre/graph/: builder.py
isre/knowledge/: domain.py  engine.py  gaps.py  physics.py
isre/models/: __init__.py  intent.py  primitives.py  reasoning.py
isre/pipeline/: orchestrator.py
isre/reasoning/: dynamics.py  generator.py  selection.py
isre/reconstruction/: __init__.py  action.py  base.py  code.py  language.py  translator.py
isre/tests/: test_compression.py  test_dynamics.py  test_generator.py  test_intent.py  test_orchestrator.py  test_primitives.py  test_reasoning.py  test_types.py
isre/utils/: __init__.py  architectural_validator.py  resources.py
urcm/: __init__.py
urcm/core/: __init__.py  attractor_network.py  context_loader.py  convergence_engine.py  data_models.py  error_handling.py  latent_space.py  mesh.py  oscillatory_gating.py  performance.py  phoneme_mapper.py  resonance_encoder.py  system.py  theory.py  validation.py
urcm/integration/: __init__.py
urcm/integration/isre/: __init__.py  bridge.py
urcm/tests/: test_attractor_network.py  test_bridge.py  test_context_loader.py  test_convergence_engine.py  test_data_models.py  test_error_handling.py  test_latent_space.py  test_mesh.py  test_oscillatory_gating.py  test_performance.py  test_phoneme_mapper.py  test_resonance_encoder.py  test_system.py  test_theory.py  test_validation.py
usecases/fraud_detection/: analyzer.py  demo.py
usecases/medical_diagnosis/: analyzer.py  demo.py  knowledge.py
