[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hsrai"
version = "1.0.0"
description = "Hybrid Semantic Reasoning AI - A Deterministic, Auditable, Cryptographically Verifiable Reasoning Operating System"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [{name = "Kriti"}]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.9",
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "psutil>=5.9",
    "networkx>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["hsrai/tests", "urcm/tests", "isre/tests"]
