[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hsrai"
version = "1.0.0"
description = "Hybrid Semantic Reasoning AI - A Deterministic, Auditable, Cryptographically Verifiable Reasoning Operating System"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.10"
authors = [{name = "Kriti"}]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.9",
    "pydantic>=2.0",
    "cryptography>=41.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "hypothesis>=6.0",
    "psutil>=5.9",
    "networkx>=3.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]
nlp = [
    "sentence-transformers>=2.2.0",
]
neo4j = [
    "neo4j>=5.0.0",
]
usecases = [
    "sentence-transformers>=2.2.0",
]
all = [
    "hsrai[dev,api,nlp,neo4j,usecases]",
]

[project.scripts]
hsrai = "hsrai.cli:main"

[tool.pytest.ini_options]
testpaths = ["hsrai/tests", "urcm/tests", "isre/tests", "usecases"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
